Fixed cards alignment and height

--- a/survey-project-frontend/src/App.css
+++ b/survey-project-frontend/src/App.css
@@ -15,7 +15,7 @@
   background-position: center;
   background-size: cover;
   height: 100vh;
-  overflow: hidden
+  overflow-x: hidden;
 }
 
 .container {
@@ -137,14 +137,21 @@ form div div {
 }
 
 .card-container {
-  width: calc(100% - 0.8em);
+  width: calc(100% - 1.2em);
   padding: 1em;
   padding-left: 0;
-  margin: 0.2em;
+  margin: 0.4em;
   background-color: white;
-  height: 6em;
+  min-height: 6em;
+  max-height: fit-content;
   border-radius: 10px;
   overflow: hidden;
+}
+
+.card-info {
+  height: fit-content;
+  width: fit-content;
+  max-width: 450px;
 }
 
 .card {
@@ -152,7 +159,12 @@ form div div {
   justify-content: space-between;
 }
 
+.info {
+  height: fit-content;
+}
+
 button {
+  width: 80px;
   border-radius: 5px;
   border: 0;
   padding: 0.5em 1em;
